# My-C-plus-plus-projects

./: README.md
ArgParser/: README.md
ArgParser/lib/: ArgParser.cpp  ArgParser.h
ArgParser/tests/: argparser_test.cpp
Array/: CMakeLists.txt  README.md
Array/lib/: C,akeLists.txt  CubicArray.cpp  CubicArray.h
Array/tests/: CMakeLists.txt  cubic_array_test.cpp
BST/: CMakeLists.txt  README.md
BST/lib/: bintree.h
BST/tests/: CMakeLists.txt  bintree_test.cpp
HamArch/: CMakeLists.txt  README.md  hamming_coding.cpp  hamming_coding.h  main.cpp  operations.cpp  operations.h  parcer.cpp  parcer.h
PrintFile/: README.md  main.cpp
STL Adapters/: CMakeLists.txt  README.md
STL Adapters/lib/: CMakeLists.txt  adpcont.h  all_adapters.h
STL Adapters/tests/: CMakeLists.txt  adp_test.cpp
SandPileModel/: README.md  image.cpp  image.h  iteration.cpp  iteration.h  main.cpp  parcer.h  parcercmd.cpp  parcertsv.cpp
Simple Search Engine/: CMakeLists.txt  README.md
Simple Search Engine/index/lib/: index.cpp  index.h
Simple Search Engine/query/lib/: query.cpp  query.h
Simple Search Engine/tests/: index_test.cpp
TTaskScheduler/: CMakeLists.txt  README.md
TTaskScheduler/lib/: CMakeLists.txt  sheduler.h
TTaskScheduler/tests/: CMakeLists.txt  sheduler_tests.cpp
Weather/: CMakeLists.txt  README.md
Weather/lib/: config.json  database.cpp  database.h  interface.cpp  interface.h
int2023_t/: README.md
int2023_t/lib/: number.cpp  number.h
